# 18eda

./: .gitignore  .gitlab-ci.yml  CMakeGoogle.txt  CMakeLists.txt  runTests.cpp
08lineales/: test.cpp
08lineales/01/: ej01.cpp  ej01.h
08lineales/04/: ej04.h
08lineales/05/: ej05.h
08lineales/07/: ej07.h
08lineales/18/: ej18.h
08lineales/19/: ej19.h
08lineales/30/: ej30.h
08lineales/lista/nodos_doblemente_enlazados/: lista.h
09arboles/: CMakeLists.txt  test.cpp
09arboles/01/: arbin_modificado.h  ej01.h
09arboles/02/: ej02.cpp  ej02.h
09arboles/03/: ej03.h
09arboles/arbol_binario/: arbin.h
09arboles/c06/: c06.cpp  c06.h
09arboles/c07/: c07.cpp  c07.h
10diccionarios/: test.cpp
10diccionarios/01/: ej01.h
10diccionarios/03/: ej03.h
10diccionarios/05/: conjunto.h
10diccionarios/06/: ej06.h
10diccionarios/arbol_busqueda/: diccionario.h
10diccionarios/c08/: c08.cpp  c08.h
10diccionarios/hash_table/: DiccionarioHash.h  hash.h
11aplicaciones/: test.cpp
11aplicaciones/01/: 01.h
11aplicaciones/03/: 03.h
11aplicaciones/04/: 04.h
12examenes/2018Junio/ej1/: ejemplos.in  ejemplos.out  leeme.txt  lista.h  main.cpp  test.cpp
12examenes/2018Junio/ej2/: main.cpp  main.h  sol.cpp  test.cpp
12examenes/2018Junio/ej3/: ParqueNatural.cpp  ParqueNatural.h  leeme.txt  test.cpp
12examenes/2019Junio/ej1/: leeme.txt  lista.h  test.cpp
12examenes/2019Junio/ej2/: Arbin.h  main.cpp  sol.cpp  sol.h  test.cpp
12examenes/2019Junio/ej3/: SistemaVentas.cpp  SistemaVentas.h  hash.h  leeme.txt  main.cpp  test.cpp
